trying to fix favicon which is not showing?

--- a/styles/_navi.scss
+++ b/styles/_navi.scss
@@ -23,15 +23,21 @@
     margin: 0rem 1.5rem;
     padding: 0.3rem 1rem;
     font-size: 1.7rem;
+    font-weight: 500;
     cursor: pointer;
 
     &:hover{
-      background-color: $green-bright;
-      color: $green-dark;
+      // background-color: $green-bright;
+      // color: black;
       padding: 0.3rem 1rem;
       text-align: center;
       border-radius: 20px;
       transition-duration: 0.5s;
+      box-shadow: 
+      2px 2px 8px $bright-color2, 
+      -2px -2px 8px $bright-color2,
+      2px -2px 8px $bright-color2,
+      -2px 2px 8px $bright-color2;
     }
 
 }
