--- a/styles/main.css
+++ b/styles/main.css
@@ -912,17 +912,18 @@ button {
   margin: 0rem 1.5rem;
   padding: 0.3rem 1rem;
   font-size: 1.7rem;
+  font-weight: 500;
   cursor: pointer;
 }
 
 .buttonNav:hover {
-  background-color: #a7d7cc;
-  color: #2b5757;
   padding: 0.3rem 1rem;
   text-align: center;
   border-radius: 20px;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
+  -webkit-box-shadow: 2px 2px 8px #d5e5ee, -2px -2px 8px #d5e5ee, 2px -2px 8px #d5e5ee, -2px 2px 8px #d5e5ee;
+          box-shadow: 2px 2px 8px #d5e5ee, -2px -2px 8px #d5e5ee, 2px -2px 8px #d5e5ee, -2px 2px 8px #d5e5ee;
 }
 
 .active {
